[tool.poetry]
name = "hub-python-sdk"
version = "0.1.0"
description = ""
authors = ["davidhieber <david.hieber@uni-tuebingen.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
yarl = "^1.9.4"
aiohttp = "^3.9.1"
pydantic = "^2.5.2"
pytest = "^7.4.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[tool.ruff]
line-length = 120


# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F", "I001"]
ignore = []
per-file-ignores = { "*/__init__.py" = ["F401"] }

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py311"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.tox]
legacy_tox_ini ="""
[tox]
envlist = py37, py38, py39, py310

[gh-actions]
python =
    3.7: py37
    3.8: py38
    3.9: py39
    3.10: py310

[testenv]
passenv = *
allowlist_externals = poetry
commands =
    poetry run pytest
"""





[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
